--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -25,61 +25,60 @@
             <img class="img_top_right_split" />
             <a class="a_top_right_yhm no_line">
                 rebirth033
-                <img src="@Url.Content("~/Areas/Business/Css/images/arrow_down.png")" style="width: 12px; height: 18px; margin: -3px 5px 0 5px;" />
+                <img class="img_top_right_yhm" />
             </a>
         </div>
     </div>
-    <div id="divHead" style="background-color: #5bc0de; background-image: url('../../Css/images/logo3_small.png'); width: 100%; height: 80px; vertical-align: middle;">
-        <div style="float: left; width: 120px; margin-left: 200px; margin-top: 5px;">
-            <img style="width: 100%; text-align: center; color: white; font-size: 25px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/logo.png")" />
-            <span style="width: 100%; text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: white; font-size: 17px; float: left; cursor: default;">infotownlet.com</span>
+    <div id="divHead" class="div_head">
+        <div class="div_head_left">
+            <img class="img_head_left" src="@Url.Content("~/Areas/Business/Css/images/logo.png")" />
+            <span class="span_head_left">infotownlet.com</span>
         </div>
-        <ul style="width: 450px; height: 80px; display: block; float: left; margin-left: 100px; margin-top: 20px; vertical-align: middle">
-            <li class="liHead" id="liGRZX">个人中心</li>
-            <li class="liHead" id="liZHSZ">账户设置</li>
-            <li class="liHead" id="liSHGJ">生活工具</li>
+        <ul class="ul_head_right">
+            <li class="li_head_right" id="liGRZX">个人中心</li>
+            <li class="li_head_right" id="liZHSZ">账户设置</li>
+            <li class="li_head_right" id="liSHGJ">生活工具</li>
         </ul>
     </div>
-    <div id="divSplit" style="width: 100%; height: 30px">
-
+    <div class="div_split" id="divSplit">
     </div>
-    <div id="divContent" style="width: 100%; height: 931px;">
-        <div id="divLeftMenu" style="height: 100%; float: left; width: 184px; background-color: #fafafa; margin-left: 170px; text-align: center">
-            <ul id="ulGRZX" style="display: block; padding: 20px 0 0 20px">
-                <li class="liLeftMenu">
-                    <span class="spanleftfirst" id="spanQRZH">个人中心</span>
-                    <em class="emstep" style="width: 140px; height: 1px;"></em>
+    <div id="divContent" class="div_content">
+        <div id="divLeftMenu" class="div_left_menu">
+            <ul id="ulGRZX" class="ul_left_menu">
+                <li class="li_left_menu">
+                    <span class="span_left_menu_first" id="spanQRZH">个人中心</span>
+                    <em class="em_left_menu"></em>
                 </li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDFB">我的发布</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDSC">我的收藏</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDQZ">我的求职</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDZP">我的招聘</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDJY">我的交易</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDDG">我的订购</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanKHFW">客户服务</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanBZZX">帮助中心</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
-            <ul id="ulZHSZ" style="display: block; padding: 20px 0 0 20px">
-                <li class="liLeftMenu">
-                    <span class="spanleftfirst" id="spanZHSZ">账户设置</span>
-                    <em class="emstep" style="width: 140px; height: 1px;"></em>
+            <ul id="ulZHSZ" class="ul_left_menu">
+                <li class="li_left_menu">
+                    <span class="span_left_menu_first" id="spanZHSZ">账户设置</span>
+                    <em class="em_left_menu"></em>
                 </li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanGRZL">个人资料</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanZHBD">账号绑定</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanRZGL">认证管理</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanMMSZ">密码设置</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanXXGL">消息管理</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanGRZL">个人资料</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanZHBD">账号绑定</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanRZGL">认证管理</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanMMSZ">密码设置</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanXXGL">消息管理</span></li>
             </ul>
-            <ul id="ulSHGJ" style="display: block; padding: 20px 0 0 20px">
-                <li class="liLeftMenu">
-                    <span class="spanleftfirst" id="spanSHGJ">生活工具</span>
-                    <em class="emstep" style="width: 140px; height: 1px;"></em>
+            <ul id="ulSHGJ" class="ul_left_menu">
+                <li class="li_left_menu">
+                    <span class="span_left_menu_first" id="spanSHGJ">生活工具</span>
+                    <em class="em_left_menu"></em>
                 </li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanHFCZ">话费充值</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanDKCZ">点卡充值</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanHCDP">火车订票</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanWZCX">违章查询</span></li>
-                <li class="liLeftMenu"><span class="spanleftsecond" id="spanJDYD">酒店预订</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanHFCZ">话费充值</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanDKCZ">点卡充值</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanHCDP">火车订票</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWZCX">违章查询</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanJDYD">酒店预订</span></li>
             </ul>
 
         </div>
