--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -107,7 +107,7 @@
     width: 130px;
     color: white;
     height: 40px;
-    font-size: 18px;
+    font-size: 16px;
     display: inline;
     margin-left: 30px;
     cursor: pointer;
@@ -127,7 +127,6 @@
     height: 100%;
     float: left;
     width: 184px;
-    background-color: #fafafa;
     margin-left: 170px;
     text-align: center;
 }
@@ -135,6 +134,8 @@
 .ul_left_menu {
     display: block;
     padding: 20px 0 0 20px;
+    background-color: #fafafa;
+    margin-bottom: 0;
 }
 
 .span_left_menu_first {
