--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
@@ -91,7 +91,7 @@
 }
 
 .div_new_info_body_left_inner_info {
-    width: 210px;
+    width: 200px;
     height: 77px;
     display: inline-block;
     vertical-align: middle;
@@ -119,9 +119,10 @@
 
 .div_new_info_body_middle {
     float: left;
-    width: 250px;
+    width: 310px;
     height: 80px;
-    margin-top: 31px;
+    margin-top: 37px;
+    padding-left: 12px;
     border-left: 1px solid #e6e6e6;
 }
 
@@ -132,14 +133,13 @@
     height: 17px;
     font-size: 12px;
     display: block;
-    
 }
 
 .div_new_info_body_right {
     float: left;
-    width: 250px;
+    width: 210px;
     height: 80px;
-    margin-top: 31px;
+    margin-top: 37px;
     border-left: 1px solid #e6e6e6;
 }
 
@@ -154,11 +154,12 @@
 
 .active {
     cursor: pointer;
-}
-
-.active:hover {
     color: #5bc0de;
 }
+
+    .active:hover {
+        color: #5bc0de;
+    }
 
 .div_no_info {
     width: 900px;
@@ -169,4 +170,52 @@
     font-size: 12px;
     color: #000;
     text-align: center;
+}
+
+.span_new_info_body_middle_common {
+    font-size: 12px;
+}
+
+.span_new_info_body_middle_status {
+    color: #85bb43;
+    display: block;
+}
+
+.span_new_info_body_middle_read {
+    display: block;
+    margin-top: 2px;
+}
+
+.span_new_info_body_middle_tip {
+    display: block;
+    margin-top: 2px;
+}
+
+.span_new_info_body_middle_update {
+    cursor: pointer;
+    padding-left: 28px;
+    margin-top: 20px;
+    display: inline-block;
+    color: #5bc0de;
+}
+
+.span_new_info_body_middle_refresh {
+    cursor: pointer;
+    padding-left: 12px;
+    display: inline-block;
+    color: #5bc0de;
+}
+
+.span_new_info_body_middle_top {
+    cursor: pointer;
+    padding-left: 12px;
+    display: inline-block;
+    color: #5bc0de;
+}
+
+.span_new_info_body_middle_delete {
+    cursor: pointer;
+    padding-left: 12px;
+    display: inline-block;
+    color: #5bc0de;
 }
