--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -40,41 +40,41 @@
             <em class="emstep" id="emOther" style="width: 250px;"></em>
         </div>
     </div>
-<div id="div_main_info" class="div_main_info">
-    <ul class="ul_new_info">
-        <li class="li_new_info">
-            <div class="div_new_info">
-                <div class="div_new_info_head">
-                    <span class="span_new_info_head">信息号: 5f66c203-82ce-497e-964f-059179d345f9</span>
-                </div>
-                <div class="div_new_info_body">
-                    <div class="div_new_info_body_left">
-                        <div class="div_new_info_body_left_inner">
-                            <div class="div_new_info_body_left_inner_img">
-                                <img class="img_new_info_body_left" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
+    <div id="div_main_info" class="div_main_info">
+        @*<ul class="ul_new_info">
+                <li class="li_new_info">
+                    <div class="div_new_info">
+                        <div class="div_new_info_head">
+                            <span class="span_new_info_head">信息号: 5f66c203-82ce-497e-964f-059179d345f9</span>
+                        </div>
+                        <div class="div_new_info_body">
+                            <div class="div_new_info_body_left">
+                                <div class="div_new_info_body_left_inner">
+                                    <div class="div_new_info_body_left_inner_img">
+                                        <img class="img_new_info_body_left" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
+                                    </div>
+                                    <div class="div_new_info_body_left_inner_info">
+                                        <span class="span_new_info_body_left_bt">君临天华B区5号楼单身公寓一套</span>
+                                        <span class="span_new_info_body_left_rq">2017-7-19 03:01:41</span>
+                                        <span class="span_new_info_body_left_dh">福州 - 房产信息 - 租房</span>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="div_new_info_body_left_inner_info">
-                                <span class="span_new_info_body_left_bt">君临天华B区5号楼单身公寓一套</span>
-                                <span class="span_new_info_body_left_rq">2017-7-19 03:01:41</span>
-                                <span class="span_new_info_body_left_dh">福州 - 房产信息 - 租房</span>
+                            <div class="div_new_info_body_middle">
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_status">显示中</span>
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_read">浏览:28</span>
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_tip">进行置顶或精准推广会让你的信息成交更快哦。</span>
+                            </div>
+                            <div class="div_new_info_body_right">
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_update">修改</span>
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_refresh">刷新</span>
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_top">置顶</span>
+                                <span class="span_new_info_body_middle_common span_new_info_body_middle_delete">删除</span>
                             </div>
                         </div>
                     </div>
-                    <div class="div_new_info_body_middle">
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_status">显示中</span>
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_read">浏览:28</span>
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_tip">进行置顶或精准推广会让你的信息成交更快哦。</span>
-                    </div>
-                    <div class="div_new_info_body_right">
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_update">修改</span>
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_refresh">刷新</span>
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_top">置顶</span>
-                        <span class="span_new_info_body_middle_common span_new_info_body_middle_delete">删除</span>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul>
-</div>
+                </li>
+            </ul>*@
+    </div>
 </body>
 </html>
