--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
@@ -158,7 +158,7 @@
 }
 
     .active:hover {
-        color: #5bc0de;
+        color: #ff6100;
     }
 
 .div_no_info {
@@ -174,6 +174,10 @@
 
 .span_new_info_body_middle_common {
     font-size: 12px;
+}
+
+.span_new_info_body_middle_common_button:hover {
+    color: #ff6100;
 }
 
 .span_new_info_body_middle_status {
