--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -51,7 +51,12 @@
                 </li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" class="img_left_menu_second" /></li>
+                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanGZYQ">工作邀请</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanJLRZ">简历认证</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDHD">我的互动</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>
