--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -49,19 +49,29 @@
                     <span class="span_left_menu_first" id="spanQRZH">个人中心</span>
                     <em class="em_left_menu"></em>
                 </li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" class="img_left_menu_second" /></li>
-                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanGZYQ">工作邀请</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanJLRZ">简历认证</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDHD">我的互动</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
+                <li id="li_left_menu_WDFB" class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
+                <li id="li_left_menu_WDSC" class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
+                <li id="li_left_menu_WDQZ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" class="img_left_menu_second" /></li>
+                <li id="li_left_menu_WDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
+                <li id="li_left_menu_TDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
+                <li id="li_left_menu_GZYQ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanGZYQ">工作邀请</span></li>
+                <li id="li_left_menu_JLRZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanJLRZ">简历认证</span></li>
+                <li id="li_left_menu_WDHD" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDHD">我的互动</span></li>
+                <li id="li_left_menu_WDZP" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span><img id="imgWDZP" class="img_left_menu_second" /></li>
+                <li id="li_left_menu_ZWGL" class="li_left_menu"><img id="imgZWGL" class="img_left_menu_third" /><span class="span_left_menu_third WDZP_child" id="spanZWGL">职位管理</span></li>
+                <li id="li_left_menu_QZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanQZZW">全职职位</span></li>
+                <li id="li_left_menu_JZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanJZZW">兼职职位</span></li>
+                <li id="li_left_menu_JLGL" class="li_left_menu"><img id="imgJLGL" class="img_left_menu_third"/><span class="span_left_menu_third WDZP_child" id="spanJLGL">简历管理</span></li>
+                <li id="li_left_menu_SDJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanSDJL">收到简历</span></li>
+                <li id="li_left_menu_TJJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanTJJL">推荐简历</span></li>
+                <li id="li_left_menu_YXZJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanYXZJL">已下载简历</span></li>
+                <li id="li_left_menu_FSMSYQ" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanFSMSYQ">发送的面试邀请</span></li>
+                <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third"/><span class="span_left_menu_third WDZP_child" id="spanZHXX">账号信息</span></li>
+                <li id="li_left_menu_GSZL" class="li_left_menu"><span class="span_left_menu_four ZHXX_child" id="spanGSZL">公司资料</span></li>
+                <li id="li_left_menu_WDJY" class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
+                <li id="li_left_menu_WDDG" class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>
+                <li id="li_left_menu_KHFW" class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
+                <li id="li_left_menu_BZZX" class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
             <ul id="ulZHSZ" class="ul_left_menu">
                 <li class="li_left_menu">
