--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -68,8 +68,8 @@
                 <li id="li_left_menu_FSMSYQ" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanFSMSYQ">发送的面试邀请</span></li>
                 <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third"/><span class="span_left_menu_third WDZP_child" id="spanZHXX">账号信息</span></li>
                 <li id="li_left_menu_GSZL" class="li_left_menu"><span class="span_left_menu_four ZHXX_child" id="spanGSZL">公司资料</span></li>
-                <li id="li_left_menu_WDJY" class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
-                <li id="li_left_menu_WDDG" class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>
+                @*<li id="li_left_menu_WDJY" class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
+                <li id="li_left_menu_WDDG" class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>*@
                 <li id="li_left_menu_KHFW" class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
                 <li id="li_left_menu_BZZX" class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
