--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -61,15 +61,13 @@
                 <li id="li_left_menu_ZWGL" class="li_left_menu"><img id="imgZWGL" class="img_left_menu_third" /><span class="span_left_menu_third WDZP_child" id="spanZWGL">职位管理</span></li>
                 <li id="li_left_menu_QZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanQZZW">全职职位</span></li>
                 <li id="li_left_menu_JZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanJZZW">兼职职位</span></li>
-                <li id="li_left_menu_JLGL" class="li_left_menu"><img id="imgJLGL" class="img_left_menu_third"/><span class="span_left_menu_third WDZP_child" id="spanJLGL">简历管理</span></li>
+                <li id="li_left_menu_JLGL" class="li_left_menu"><img id="imgJLGL" class="img_left_menu_third" /><span class="span_left_menu_third WDZP_child" id="spanJLGL">简历管理</span></li>
                 <li id="li_left_menu_SDJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanSDJL">收到简历</span></li>
                 <li id="li_left_menu_TJJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanTJJL">推荐简历</span></li>
-                <li id="li_left_menu_YXZJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanYXZJL">已下载简历</span></li>
-                <li id="li_left_menu_FSMSYQ" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanFSMSYQ">发送的面试邀请</span></li>
-                <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third"/><span class="span_left_menu_third WDZP_child" id="spanZHXX">账号信息</span></li>
-                <li id="li_left_menu_GSZL" class="li_left_menu"><span class="span_left_menu_four ZHXX_child" id="spanGSZL">公司资料</span></li>
-                @*<li id="li_left_menu_WDJY" class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>
-                <li id="li_left_menu_WDDG" class="li_left_menu"><span class="span_left_menu_second" id="spanWDDG">我的订购</span></li>*@
+                <li id="li_left_menu_YXZJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanYXZJL" style="margin-left: 35px">已下载简历</span></li>
+                <li id="li_left_menu_FSMSYQ" class="li_left_menu" style="width:150px"><span id="spanFSMSYQ" class="span_left_menu_four JLGL_child" style="margin-left: 40px">发送的面试邀请</span></li>
+                <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third" /><span id="spanZHXX" class="span_left_menu_third WDZP_child">账号信息</span></li>
+                <li id="li_left_menu_GSZL" class="li_left_menu"><span id="spanGSZL" class="span_left_menu_four ZHXX_child">公司资料</span></li>
                 <li id="li_left_menu_KHFW" class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
                 <li id="li_left_menu_BZZX" class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
