--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/WDFB.js")"></script>
 </head>
 <body>
-    <div class="wdfb_right_head">
+    <div class="right_head">
         <div class="divstep" id="divZJFBXX">
             <span class="spanstep" id="spanZJFBXX">最近发布信息</span>
             <em class="emstep" id="emZJFBXX"></em>
