--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/GRZL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/GRZL.css
@@ -1,1 +1,71 @@
-﻿
+﻿.right_head {
+    width: 900px;
+    display: block;
+    height: 50px;
+    margin-top: 16px;
+}
+
+.divstep {
+    width: 130px;
+    text-align: center;
+    height: 30px;
+    float: left;
+    cursor: pointer;
+}
+
+.spanstep {
+    font-size: 16px;
+    margin-bottom: 5px;
+    line-height: 44px;
+    color: #cccccc;
+}
+
+.emstep {
+    width: 130px;
+    height: 1px;
+    float: left;
+    background: #cccccc;
+}
+
+.div_main_info {
+    display: block;
+    width: 100%;
+}
+
+.div_main_photo {
+    width: 900px; 
+    height: 220px;
+}
+
+.div_main_photo_img {
+    width: 140px; 
+    height: 140px;
+    border: 1px solid #cccccc;
+    margin-top: 17px;
+}
+
+.img_main_photo {
+    width: 128px; 
+    height: 128px;
+    background-repeat: no-repeat;
+    background-position: center;
+    vertical-align: middle;
+    margin: 5px 5px;
+}
+
+.div_main_photo_button {
+    margin-top: 14px;
+    margin-left: 2px;
+}
+
+.button_main_photo {
+    font-size: 14px;
+    width: 135px;
+    height: 40px;
+    border-radius: 4px;
+    cursor: pointer;
+    background: #5bc0de;
+    color: #fff;
+    border: none;
+    display: none;
+}
