--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -41,8 +41,8 @@
                 <img class="img_main_photo" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")"/>
             </div>
             <div class="div_main_photo_button">
-                <input class="button_main_photo" id="button_main_photo_bcwxtx" type="button" value="保存微信头像" />
-                <input class="button_main_photo" id="button_main_photo_sctx" type="button" value="上传头像" />
+                <input class="button_main_photo" id="btnSYWXTX" type="button" value="保存微信头像" />
+                <input class="button_main_photo" id="btnBDSC" type="button" value="上传头像" />
             </div>
         </div>
     </div>
