上传系统头像

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/GRZL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/GRZL.css
@@ -37,11 +37,12 @@
     height: 220px;
 }
 
-.div_main_photo_img {
+.div_main_photo_left {
     width: 140px; 
     height: 140px;
     border: 1px solid #cccccc;
     margin-top: 17px;
+    float: left;
 }
 
 .img_main_photo {
@@ -58,14 +59,102 @@
     margin-left: 2px;
 }
 
-.button_main_photo {
+.div_button_main_photo {
+    z-index: 100;
+    float: left;
     font-size: 14px;
     width: 135px;
     height: 40px;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+}
+
+.div_button_main_photo_child {
+    padding-top: 10px;
+    width: 135px;
+    height: 40px;
+    background-color: #5bc0de;
+    position: relative;
+    display: block;
+    float: left;
+    z-index: 101;
+    color: #fff;
     border-radius: 4px;
+}
+
+.button_main_photo {
+    position: absolute;
+    font-size: 14px;
+    width: 135px;
+    height: 40px;
     cursor: pointer;
     background: #5bc0de;
-    color: #fff;
-    border: none;
     display: none;
+    z-index: 102;
+    color: #fff;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+}
+
+.button_main_photo_upload {
+    border-radius: 4px;
+    opacity: 0;
+}
+
+.div_main_photo_middle {
+    float: left;
+    margin-top: 25px;
+    margin-left: 120px;
+    text-align: center;
+    display: none;
+}
+
+.img_main_photo_middle {
+    border-radius: 50%;
+    width: 128px;
+    height: 128px;
+}
+
+.span_main_photo_middle {
+    font-size: 14px;
+    color: #999;
+    width: 150px;
+    display: block;
+    text-align: center;
+}
+
+.div_main_photo_middle_xt {
+        float: left;
+    margin-top: 25px;
+    margin-left: 120px;
+    text-align: center;
+    display: none;
+}
+
+.span_main_photo_middle_xt {
+        font-size: 14px;
+    color: #999;
+    width: 180px;
+    display: block;
+    text-align: center;
+}
+
+.ul_main_photo_middle_xt {
+    margin-top: 20px;
+}
+
+.li_main_photo_middle_xt {
+    cursor: pointer;
+    float: left;
+    display: block;
+    width: 85px;
+    margin-right: 13px;
+}
+
+.img_main_photo_middle_xt {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
 }
