头像上传完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -59,10 +59,10 @@
             <div id="div_main_photo_middle_xt" class="div_main_photo_middle_xt">
                 <span class="span_main_photo_middle_xt">请选择喜欢的系统头像：</span>
                 <ul class="ul_main_photo_middle_xt">
-                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo1.png")" /></li>
-                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo2.png")" /></li>
-                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo3.png")" /></li>
-                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo4.png")" /></li>
+                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo1.jpg")" /></li>
+                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo2.jpg")" /></li>
+                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo3.jpg")" /></li>
+                    <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/system_photo4.jpg")" /></li>
                 </ul>
             </div>
         </div>
