修改用户名完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -32,8 +32,8 @@
                 <em class="emstep" id="emXTTX"></em>
             </div>
             <div class="divstep">
-                <span class="spanstep" id="spanOther">&nbsp;</span>
-                <em class="emstep" id="emOther" style="width: 510px;"></em>
+                <span class="spanstep">&nbsp;</span>
+                <em class="emstep" style="width: 510px;"></em>
             </div>
         </div>
         <div id="div_photo_info" class="div_photo_info">
@@ -74,8 +74,8 @@
                 <em class="emstep_info" id="emXGGRZL"></em>
             </div>
             <div class="divstep_info">
-                <span class="spanstep_info" id="spanOther">&nbsp;</span>
-                <em class="emstep_info" id="emOther" style="width: 770px;"></em>
+                <span class="spanstep_info">&nbsp;</span>
+                <em class="emstep_info" style="width: 770px;"></em>
             </div>
         </div>
         <div class="div_person_info">
@@ -83,9 +83,9 @@
                 <span class="span_person_info">用户名：</span>
             </div>
             <div class="div_person_info_right">
-                <input id="input_person_info_yhm" maxlength="30" class="input_person_info" type="text" />
-                <img class="img_person_info" />
-                <span class="span_person_info">修改</span>
+                <input class="input_person_info" id="input_person_info_yhm" maxlength="30" readonly="readonly" type="text" />
+                <img class="img_person_info" id="img_person_info_yhm" />
+                <span class="span_person_info_right" id="span_person_info_right_xg">修改</span>
             </div>
         </div>
         <div class="div_person_info">
@@ -93,7 +93,9 @@
                 <span class="span_person_info">手机：</span>
             </div>
             <div class="div_person_info_right">
-                <input id="input_person_info_yhm" maxlength="30" class="input_person_info" type="text" />
+                <input class="input_person_info" id="input_person_info_sj" maxlength="30" readonly="readonly" type="text" />
+                <img class="img_person_info" />
+                <span class="span_person_info_right">修改</span>
             </div>
         </div>
 
@@ -102,7 +104,9 @@
                 <span class="span_person_info">邮箱：</span>
             </div>
             <div class="div_person_info_right">
-                <input id="input_person_info_yhm" maxlength="30" class="input_person_info" type="text" />
+                <input class="input_person_info" id="input_person_info_yx" maxlength="30" readonly="readonly" type="text" />
+                <img class="img_person_info" />
+                <span class="span_person_info_right">修改</span>
             </div>
         </div>
     </form>
