--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/GRZL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/GRZL.css
@@ -193,7 +193,7 @@
 }
 
 .div_person_info {
-        width: 100%;
+    width: 100%;
     display: block;
     margin-top: 20px;
 }
@@ -203,20 +203,35 @@
     text-align: right;
     display: inline-block;
     font-size: 14px;
-    width:10%;
+    width: 10%;
 }
 
 .div_person_info_right {
     display: inline-block;
     margin-left: 10px;
     position: relative;
-    width:20%;
+    width: 40%;
 }
 
 .input_person_info {
-    width:99%;
-    border:1px solid #ccc;
-    border-radius:4px;
-    height:34px;
-    padding:4px 12px;
+    width: 66%;
+    cursor: default;
+    border: none;
+    border-radius: 4px;
+    height: 34px;
+    padding: 4px 12px;
+    display: inline-block;
+}
+
+.img_person_info {
+    width: 18px;
+    height: 18px;
+    background-image: url(images/person_info_edit.png);
+    margin-left: 16px;
+    cursor: pointer;
+}
+
+.span_person_info_right {
+    color: #5bc0de;
+    cursor: pointer;
 }
