修改手机完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -85,23 +85,23 @@
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_yhm" maxlength="30" readonly="readonly" type="text" />
                 <img class="img_person_info" id="img_person_info_yhm" />
-                <span class="span_person_info_right" id="span_person_info_right_xg">修改</span>
+                <span class="span_person_info_right" id="span_person_info_right_yhm">修改</span>
             </div>
         </div>
         <div class="div_person_info">
             <div class="div_person_info_left">
-                <span class="span_person_info">手机：</span>
+                <span class="span_person_info">手&nbsp;&nbsp;&nbsp;&nbsp;机：</span>
             </div>
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_sj" maxlength="30" readonly="readonly" type="text" />
                 <img class="img_person_info" />
-                <span class="span_person_info_right">修改</span>
+                <span class="span_person_info_right" id="span_person_info_right_sj">修改</span>
             </div>
         </div>
 
         <div class="div_person_info">
             <div class="div_person_info_left">
-                <span class="span_person_info">邮箱：</span>
+                <span class="span_person_info">邮&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
             </div>
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_yx" maxlength="30" readonly="readonly" type="text" />
