--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
@@ -38,13 +38,15 @@
                 </tr>
             </table>
         </div>
-        <div id="myTabContent" style="margin-left: 18%; padding-bottom: 150px; width: 900px; text-align: center; ">
+        <div id="myTabContent" style="margin-left: 18%; padding-bottom: 150px; width: 900px; text-align: center;">
             <div style="border: 1px solid #e2e2e2; height: 300px; margin-left: 8px; width: 100%;">
                 <div class="fbcg_left">
                     <div class="fbcg_warning">请勿发布虚假欺诈信息，不然将影响您的个人征信纪录哦～</div>
-                    <div class="fbcg_tip"><img class="fbcg_tip_img"/>发布成功!
+                    <div class="fbcg_tip">
+                        <img class="fbcg_tip_img" />发布成功!
                     </div>
-                    <div class="fbcg_info">该信息已发布在 <a class="fbcg_info_navigation">福州 - 房产信息 - 租房</a>您的信息需要审核才能展示，请在个人中心关注信息状态。
+                    <div class="fbcg_info">
+                        该信息已发布在 <a class="fbcg_info_navigation">福州 - 房产信息 - 租房</a>您的信息需要审核才能展示，请在个人中心关注信息状态。
                     </div>
                     <div class="fbcg_main">
                         <a class="btn btn-info fbcg_btn" id="btnCKXX"><span>查看信息</span></a>
@@ -52,12 +54,13 @@
                         <a class="btn btn-info fbcg_btn" id="btnZDXX"><span>置顶信息</span></a>
                         <a class="btn btn-info fbcg_btn" id="btnZFXX"><span>再发一条</span></a>
                     </div>
-                    <div class="fbcg_tg">使用在线推广，快速提升浏览量，助您快速成交！ <a class="fbcg_info_navigation">了解详情</a>
+                    <div class="fbcg_tg">
+                        使用在线推广，快速提升浏览量，助您快速成交！ <a class="fbcg_info_navigation">了解详情</a>
                     </div>
                 </div>
                 <div class="fbcg_right">
                     <div class="fbcg_share">
-                        <img id="fbcg_share_img"  class="fbcg_share_img" />
+                        <img id="fbcg_share_img" class="fbcg_share_img" />
                     </div>
                     <div class="fbcg_sm">
                         扫码分享信息
@@ -65,6 +68,7 @@
                     <div class="fbcg_gz">
                         微信/手机QQ管理信息，获得更多关注
                     </div>
+                </div>
             </div>
         </div>
     </div>
