--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -94,7 +94,7 @@
             </div>
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_sj" maxlength="30" readonly="readonly" type="text" />
-                <img class="img_person_info" />
+                <img class="img_person_info" id="img_person_info_sj" />
                 <span class="span_person_info_right" id="span_person_info_right_sj">修改</span>
             </div>
         </div>
@@ -105,8 +105,8 @@
             </div>
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_yx" maxlength="30" readonly="readonly" type="text" />
-                <img class="img_person_info" />
-                <span class="span_person_info_right">修改</span>
+                <img class="img_person_info" id="img_person_info_yx" />
+                <span class="span_person_info_right" id="span_person_info_right_yx">修改</span>
             </div>
         </div>
     </form>
