--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZ.cshtml
@@ -39,9 +39,9 @@
                 <tr>
                     <td>
                         <span>您的邮箱：</span>
-                        <input type="text" id="inputYSJ" readonly="readonly" class="input_content" style="width: 316px;">
+                        <input type="text" id="inputYX" class="input_content" style="width: 316px;" placeholder="请输入电子邮箱">
                     </td>
-                    <td class="Info" id="YSJInfo" style="width: 50%"></td>
+                    <td class="Info" id="YXInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
                     <td><input type="button" class="btn btn-info input_text" id="btnFirst" value="发送认证邮件" /></td>
@@ -49,20 +49,13 @@
             </table>
         </div>
         <div id="divSecond" style="display: none">
-            <table class="table" style="width: 600px; ">
+            <table style="width: 900px; ">
                 <tr>
                     <td>
-                        <input type="text" id="inputXSJ" class="input_content" style="width: 270px;" placeholder="请输入新手机号">
-                        <input class="btn btn-info" id="btnHQXSJYZM" type="button" style="margin-top: -3px; width: 116px;" id="btnHQYZM" value="获取验证码" />
+                        <div class="div_csyj">
+                                请登录到您的邮箱<span id="span_yx" class="span_yx">1970402157@qq.com</span>中查收认证邮件，点击邮件中的“<span class="span_yxrz">邮箱认证</span>”按钮完成认证。
+                        </div>
                     </td>
-                    <td class="Info" id="XSJInfo" style="width: 50%"></td>
-                </tr>
-                <tr>
-                    <td><input type="text" class="input_content" id="XSJYZM" placeholder="请输入验证码"></td>
-                    <td class="Info" id="XSJYZMInfo" style="width: 50%"></td>
-                </tr>
-                <tr>
-                    <td><input type="button" class="btn btn-info input_text" id="btnSecond" value="绑定" /></td>
                 </tr>
             </table>
         </div>
